--- a/src/main/resources/templates/admin/blocks/update-block.html
+++ b/src/main/resources/templates/admin/blocks/update-block.html
@@ -9,64 +9,27 @@
 <body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
-    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Courses</h2>
-    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
-        <thead style="margin-top: 10px">
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
-            <th>Title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="course : ${courses}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${course.id}"></td>
-            <td th:text="${course.title}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
     <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Blocks</h2>
     <table class="table table-striped" align="center" style="text-align: center; width:80%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
             <th>Block title</th>
             <th>Course title</th>
+            <th>Update</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="block : ${blocks}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${block.id}"></td>
             <td th:text="${block.blockTitle}"></td>
             <td th:text="${block.courseTitle}"></td>
+            <td>
+                <a align="center" th:href="@{/main-page/blocks/update/__${block.id}__}">
+                    <button style="width: 70%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Update</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update block</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/blocks/update}" th:object="${blockToUpdate}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="block-id" class="form-label">Block id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING block" class="form-control" id="block-id" th:field="*{id}">
-            </div>
-            <div>
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="block-new-title" class="form-label">New block title</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="block-new-title" th:field="*{blockTitle}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="course-id" class="form-label">Course Id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{courseId}">
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
