--- a/src/main/resources/templates/admin/classes/update-class.html
+++ b/src/main/resources/templates/admin/classes/update-class.html
@@ -9,80 +9,33 @@
 <body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
-    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Blocks</h2>
-    <table class="table table-striped" align="center" style="text-align: center; width:80%; background-color: palegreen; border-color: darkgreen;">
-        <thead style="margin-top: 10px">
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
-            <th>Block title</th>
-            <th>Course title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="block : ${blocks}">
-            <td th:text="${block.id}"></td>
-            <td th:text="${block.blockTitle}"></td>
-            <td th:text="${block.courseTitle}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
     <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Classes</h2>
     <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 20pt">
             <th>Topic</th>
             <th>Date</th>
             <th>Time</th>
             <th>Block title</th>
             <th>Course title</th>
+            <th>Update</th>
         </tr>
         </thead>
         <tbody>
         <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="class : ${classes}">
-            <td th:text="${class.id}"></td>
             <td th:text="${class.topic}"></td>
             <td th:text="${class.date}"></td>
             <td th:text="${class.time}"></td>
             <td th:text="${class.blockTitle}"></td>
             <td th:text="${class.courseTitle}"></td>
+            <td>
+                <a align="center" th:href="@{/main-page/classes/update/__${class.id}__}">
+                    <button style="width: 70%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Update</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update class</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/classes/update}" th:object="${classToUpdate}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-id" class="form-label">Class id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{id}">
-            </div>
-            <div>
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-new-topic" class="form-label">New class topic</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="class-new-topic" th:field="*{topic}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-date" class="form-label">New class date</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="YYYY-MM-DD" class="form-control" id="class-date" th:field="*{date}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-time" class="form-label">New class time</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" PLACEHOLDER="HH:MM" class="form-control" id="class-time" th:field="*{time}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="block-id" class="form-label">New block Id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="block-id" th:field="*{blockId}">
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
