--- a/src/main/resources/templates/admin/courses/update-course.html
+++ b/src/main/resources/templates/admin/courses/update-course.html
@@ -21,40 +21,21 @@
     <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
             <th>Title</th>
+            <th>Update</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="course : ${courses}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${course.id}"></td>
             <td th:text="${course.title}"></td>
+            <td>
+                <a align="center" th:href="@{/main-page/courses/update/__${course.id}__}">
+                    <button style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Update</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update course</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/courses/update}" th:object="${courseToUpdate}" method="post" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label for="course-id" class="form-label" style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt">Course id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{id}">
-            </div>
-            <div>
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="course-new-title" class="form-label">New course title</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="course-new-title" th:field="*{title}">
-            </div>
-            <div class="mb-3" style="background-color: palegreen; color: darkgreen">
-                <input type="file" class="form-control" style="background-color: darkgreen; color: palegreen" name="image" accept="image/*"/>
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
