--- a/src/main/resources/templates/admin/main-page.html
+++ b/src/main/resources/templates/admin/main-page.html
@@ -6,7 +6,7 @@
     <title>Main Page for admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body style="background-color: lightgreen">
+<body class="responsive" style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; height: 100px; margin-top:10px">
     <h1 style="text-align: center; font-size: 60pt; color: darkgreen">Welcome to the Courses Manager application</h1>
