--- a/src/main/resources/templates/admin/notifications/update-notification.html
+++ b/src/main/resources/templates/admin/notifications/update-notification.html
@@ -9,36 +9,10 @@
 <body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
-    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Classes</h2>
-    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
-        <thead style="margin-top: 10px">
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
-            <th>Topic</th>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Block title</th>
-            <th>Course title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="class : ${classes}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${class.id}"></td>
-            <td th:text="${class.topic}"></td>
-            <td th:text="${class.date}"></td>
-            <td th:text="${class.time}"></td>
-            <td th:text="${class.blockTitle}"></td>
-            <td th:text="${class.courseTitle}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
     <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Notifications</h2>
     <table class="table table-striped" align="center" style="text-align: center; width: 100%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 30pt">
-            <th>Id</th>
             <th>Topic</th>
             <th>Text</th>
             <th>Class topic</th>
@@ -46,11 +20,11 @@
             <th>Class time</th>
             <th>Block title</th>
             <th>Course title</th>
+            <th>Update</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="notification : ${notifications}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${notification.id}"></td>
             <td th:text="${notification.topic}"></td>
             <td th:text="${notification.text}"></td>
             <td th:text="${notification.classTopic}"></td>
@@ -58,37 +32,14 @@
             <td th:text="${notification.classTime}"></td>
             <td th:text="${notification.blockTitle}"></td>
             <td th:text="${notification.courseTitle}"></td>
+            <td>
+                <a align="center" th:href="@{/main-page/notifications/update/__${notification.id}__}">
+                    <button style="width: 70%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Update</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update notification</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/notifications/update}" th:object="${notificationToUpdate}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-id" class="form-label">Notification id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING notification" class="form-control" id="notification-id" th:field="*{id}">
-            </div>
-            <div>
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-new-topic" class="form-label">New notification topic</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="notification-new-topic" th:field="*{topic}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-text" class="form-label">New notification text</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="notification-text" th:field="*{text}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-id" class="form-label">New class id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" PLACEHOLDER="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{classId}">
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
