--- a/src/main/resources/templates/admin/registrations/update-registration.html
+++ b/src/main/resources/templates/admin/registrations/update-registration.html
@@ -13,93 +13,29 @@
     <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-                <th>Id</th>
                 <th>Date</th>
                 <th>Time</th>
                 <th>User name</th>
                 <th>User surname</th>
                 <th>Course title</th>
+                <th>Update</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="registration : ${registrations}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-                <td th:text="${registration.id}"></td>
                 <td th:text="${registration.date}"></td>
                 <td th:text="${registration.time}"></td>
                 <td th:text="${registration.userName}"></td>
                 <td th:text="${registration.userSurname}"></td>
                 <td th:text="${registration.courseTitle}"></td>
+                <td>
+                    <a align="center" th:href="@{/main-page/registrations/update/__${registration.id}__}">
+                        <button style="width: 70%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Update</button>
+                    </a>
+                </td>
             </tr>
             </tbody>
         </table>
-    </div>
-</div>
-<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
-    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Users</h2>
-    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
-        <thead style="margin-top: 10px">
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
-            <th>Login</th>
-            <th>Password</th>
-            <th>Role</th>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Active</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.login}"></td>
-            <td th:text="${user.password}"></td>
-            <td th:text="${user.userRole}"></td>
-            <td th:text="${user.name}"></td>
-            <td th:text="${user.surname}"></td>
-            <td th:text="${user.activeUser}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
-    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Courses</h2>
-    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
-        <thead style="margin-top: 10px">
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
-            <th>Title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="course : ${courses}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${course.id}"></td>
-            <td th:text="${course.title}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update registration</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/registrations/update}" th:object="${registrationToUpdate}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="registration-id" class="form-label">Registration id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING registration" class="form-control" id="registration-id" th:field="*{id}">
-            </div>
-            <div>
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="registration-new-user-id" class="form-label">New registration user Id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING user" class="form-control" id="registration-new-user-id" th:field="*{userId}">
-            </div>
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="registration-new-course-id" class="form-label">New registration course Id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING course" class="form-control" id="registration-new-course-id" th:field="*{courseId}">
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-top: 15px; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
-            </div>
-        </form>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
